--- a/src/components/Resume/Resume.module.css
+++ b/src/components/Resume/Resume.module.css
@@ -22,19 +22,8 @@
   font-weight: 700;
 }
 
-.email {
-}
-
-.tel {
-}
-
-.location {
-}
-
-.bio {
-}
-
-.resumeHeader h2 {
+.icon {
+  margin-right: 0.45rem;
 }
 
 .resumeBody {
