--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,6 +8,16 @@
   margin: 0;
 }
 
+.link {
+  color: antiquewhite;
+  font-size: 1.2rem;
+  color: #7dd3fc;
+}
+
+.link:hover {
+  color: #38bdf8;
+}
+
 @media (max-width: 820px) {
   .header {
     text-align: center;
